--- a/googleadvanced.html
+++ b/googleadvanced.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> <img src= "googleadvanced.png" width="250px" height="90" alt="advanced google">
+        <title> 
          </title>
         <link rel="stylesheet" type="text/css" href="googlestyles.css">
+	    
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
