--- a/googleadvanced.html
+++ b/googleadvanced.html
@@ -11,6 +11,7 @@
     <body>
         <div class="right">
     		<a href="googlecode.html"> Google Search</a>
+		
     	</div>
     	<h2 style="color: blue; font-family: Arial ;font-weight: inherit;font-style: inherit;vertical-align: baseline;margin-left: 20px;"> Google Advanced Search</h2>
     	<hr><br><br>
@@ -23,7 +24,7 @@
             <th width: 600px;>
             </th>
             <th style="font-family: Arial; color:#777; font-size: 12px; text-align: left;">
-              To do this in the search box.
+              Happens in the search box
             </th>
     			</thead>
         		<tbody>
